# webwars

./: .gitattributes  .gitignore  AGENTS.md  AmazonQ.md  BUILD_SUCCESS.md  FRONTEND_ROADMAP.md  HEDGEWARS_UPSTREAM.md  MODIFICATIONS.md  QUICKSTART.md  README.md  SCAFFOLDING_COMPLETE.md  STATUS_REPORT.md  UPSTREAM.md  build-log-clean.txt  build-log.txt  cors-server.py  test-browser.html
admin/: .env.example  app.py  index.html  nginx-dev.conf.example
gateway/: package-lock.json  package.json
gateway/src/: index.js
hedgewars/: .gitignore  CMakeLists.txt  test.hwd
hedgewars/gameServer/: JoinsMonitor.hs
hedgewars/hedgewars/: SDLh.pas  hwengine.pas  pas2cSystem.pas  uAmmos.pas  uChat.pas  uCommandHandlers.pas  uCommands.pas  uConsts.pas  uIO.pas  uMatrix.pas  uMisc.pas  uRender.pas  uSound.pas  uStore.pas  uTextures.pas  uTypes.pas  uUtils.pas  uVariables.pas
hedgewars/misc/liblua/: CMakeLists.txt
hedgewars/misc/libphysfs/: CMakeLists.txt
hedgewars/misc/libphyslayer/: CMakeLists.txt
hedgewars/project_files/hwc/: CMakeLists.txt  ipc_browser.c  physfs_probe.c  web_entry.c
hedgewars/project_files/hwc/rtl/: GL.h  gl_emscripten_compat.h  misc.h
hedgewars/project_files/web/: post.js  pre.js
hedgewars/rust/hedgewars-network-protocol/: Cargo.toml
hedgewars/rust/hedgewars-network-protocol/src/: parser.rs
hedgewars/rust/hedgewars-server/: CMakeLists.txt  Cargo.toml
hedgewars/rust/hedgewars-server/src/: handlers.rs  utils.rs
hedgewars/rust/hedgewars-server/src/core/: client.rs  digest.rs  indexslab.rs  room.rs  server.rs
hedgewars/rust/hedgewars-server/src/handlers/: actions.rs  checker.rs  common.rs  inlobby.rs  inroom.rs
hedgewars/rust/hedgewars-server/src/server/: demo.rs  haskell.rs  network.rs
hedgewars/rust/lib-hwengine-future/.cargo/: config.toml
patches/: hwc-CMakeLists.txt
patches/web/: post.js  pre.js
scripts/: analyze-assets.sh  build-native.sh  build-pas2c.sh  build-wasm.sh  package-assets.sh  package-data.sh
web/: gameconfig.js  hwengine.html  index.html  launcher.html  lobby.html  mvp.html  play.html
